# libstemmer

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  libstemmer.pc  libstemmer.pc.in  libtool
parameterized-test/: Makefile  Makefile.am  Makefile.in  stemmer-test.cpp
src/: Makefile  Makefile.am  Makefile.in
src/code/: Makefile  Makefile.am  Makefile.in  affix-pair.cpp  dictionary.cpp  disambiguator-rule-factory.cpp  hash.cpp  precedence-adjustor-specification.cpp  stemmer.cpp  stopword-remover-factory.cpp  stopword-remover.cpp  string-util.cpp
src/code/context/: Makefile  Makefile.am  Makefile.in  context.cpp  removal.cpp
src/code/context/visitor/: Makefile  Makefile.am  Makefile.in  prefix-disambiguator.cpp  remove-derivational-suffix.cpp  remove-inflectional-particle.cpp  remove-inflectional-possessive-pronoun.cpp  remove-plain-prefix.cpp  unstem-short-word.cpp  visitor-provider.cpp
src/code/disambiguator/: Makefile  Makefile.am  Makefile.in  rule-10.cpp  rule-11.cpp  rule-12.cpp  rule-13a.cpp  rule-13b.cpp  rule-14.cpp  rule-15a.cpp  rule-15b.cpp  rule-16.cpp  rule-17a.cpp  rule-17b.cpp  rule-17c.cpp  rule-17d.cpp  rule-18a.cpp  rule-18b.cpp  rule-19.cpp  rule-1a.cpp  rule-1b.cpp  rule-2.cpp  rule-20.cpp  rule-21a.cpp  rule-21b.cpp  rule-23.cpp  rule-24.cpp  rule-25.cpp  rule-26a.cpp  rule-26b.cpp  rule-27.cpp  rule-28a.cpp  rule-28b.cpp  rule-29.cpp  rule-3.cpp  rule-30a.cpp  rule-30b.cpp  rule-30c.cpp  rule-31a.cpp  rule-31b.cpp  (+21 more)
src/include/: Makefile  Makefile.am  Makefile.in
src/include/stemmer/: affix-pair.hpp  config.h  config.h.in~  dictionary-abstract.hpp  dictionary.hpp  disambiguator-abstract.hpp  disambiguator-rule-collect.hpp  disambiguator-rule-factory.hpp  hash.hpp  precedence-adjustor-specification.hpp  specification-abstract.hpp  stamp-h1  stemmer-abstract.hpp  stemmer.hpp  stopword-remover-factory.hpp  stopword-remover.hpp  string-util.hpp  util-macro.hpp
src/include/stemmer/context/: context-abstract.hpp  context.hpp  removal-abstract.hpp  removal.hpp
src/include/stemmer/context/visitor/: prefix-disambiguator.hpp  remove-derivational-suffix.hpp  remove-inflectional-particle.hpp  remove-inflectional-possessive-pronoun.hpp  remove-plain-prefix.hpp  unstem-short-word.hpp  visitable-abstract.hpp  visitor-abstract.hpp  visitor-provider.hpp
src/include/stemmer/disambiguator/: rule-10.hpp  rule-11.hpp  rule-12.hpp  rule-13a.hpp  rule-13b.hpp  rule-14.hpp  rule-15a.hpp  rule-15b.hpp  rule-16.hpp  rule-17a.hpp  rule-17b.hpp  rule-17c.hpp  rule-17d.hpp  rule-18a.hpp  rule-18b.hpp  rule-19.hpp  rule-1a.hpp  rule-1b.hpp  rule-2.hpp  rule-20.hpp  rule-21a.hpp  rule-21b.hpp  rule-23.hpp  rule-24.hpp  rule-25.hpp  rule-26a.hpp  rule-26b.hpp  rule-27.hpp  rule-28a.hpp  rule-28b.hpp  rule-29.hpp  rule-3.hpp  rule-30a.hpp  rule-30b.hpp  rule-30c.hpp  rule-31a.hpp  rule-31b.hpp  rule-32.hpp  rule-34.hpp  rule-35.hpp  (+18 more)
test/: Makefile  Makefile.am  Makefile.in  affix-pair-test.cpp  dictionary-test.cpp  disambiguator-rule-factory-test.cpp  hash-test.cpp  kata-dasar.txt  precedence-adjustor-specification-test.cpp  stemmer-test.cpp  stopword-remover-factory-test.cpp  stopword-remover-test.cpp  string-util-test.cpp  test-main.cpp
test/disambiguator/: rule-10-test.cpp  rule-11-test.cpp  rule-12-test.cpp  rule-13a-test.cpp  rule-13b-test.cpp  rule-14-test.cpp  rule-15a-test.cpp  rule-15b-test.cpp  rule-16-test.cpp  rule-17a-test.cpp  rule-17b-test.cpp  rule-17c-test.cpp  rule-17d-test.cpp  rule-18a-test.cpp  rule-18b-test.cpp  rule-19-test.cpp  rule-1a-test.cpp  rule-1b-test.cpp  rule-2-test.cpp  rule-20-test.cpp  rule-21a-test.cpp  rule-21b-test.cpp  rule-23-test.cpp  rule-24-test.cpp  rule-25-test.cpp  rule-26a-test.cpp  rule-26b-test.cpp  rule-27-test.cpp  rule-28a-test.cpp  rule-28b-test.cpp  rule-29-test.cpp  rule-3-test.cpp  rule-30a-test.cpp  rule-30b-test.cpp  rule-30c-test.cpp  rule-31a-test.cpp  rule-31b-test.cpp  rule-32-test.cpp  rule-34-test.cpp  rule-35-test.cpp  (+18 more)
