AUTOMAKE_OPTIONS = subdir-objects

AM_CPPFLAGS = -I$(srcdir)/../src/include -DPKGDATADIR='"$(pkgdatadir)"'

bin_PROGRAMS = test-main

# test/disambiguator/
test_main_SOURCES  = disambiguator/rule-1a-test.cpp
test_main_SOURCES += disambiguator/rule-1b-test.cpp
test_main_SOURCES += disambiguator/rule-2-test.cpp
test_main_SOURCES += disambiguator/rule-3-test.cpp
test_main_SOURCES += disambiguator/rule-4-test.cpp
test_main_SOURCES += disambiguator/rule-5-test.cpp
test_main_SOURCES += disambiguator/rule-6a-test.cpp
test_main_SOURCES += disambiguator/rule-6b-test.cpp
test_main_SOURCES += disambiguator/rule-7-test.cpp
test_main_SOURCES += disambiguator/rule-8-test.cpp
test_main_SOURCES += disambiguator/rule-9-test.cpp
test_main_SOURCES += disambiguator/rule-10-test.cpp
test_main_SOURCES += disambiguator/rule-11-test.cpp
test_main_SOURCES += disambiguator/rule-12-test.cpp
test_main_SOURCES += disambiguator/rule-13a-test.cpp
test_main_SOURCES += disambiguator/rule-13b-test.cpp
test_main_SOURCES += disambiguator/rule-14-test.cpp
test_main_SOURCES += disambiguator/rule-15a-test.cpp
test_main_SOURCES += disambiguator/rule-15b-test.cpp
test_main_SOURCES += disambiguator/rule-16-test.cpp
test_main_SOURCES += disambiguator/rule-17a-test.cpp
test_main_SOURCES += disambiguator/rule-17b-test.cpp
test_main_SOURCES += disambiguator/rule-17c-test.cpp
test_main_SOURCES += disambiguator/rule-17d-test.cpp
test_main_SOURCES += disambiguator/rule-18a-test.cpp
test_main_SOURCES += disambiguator/rule-18b-test.cpp
test_main_SOURCES += disambiguator/rule-19-test.cpp
test_main_SOURCES += disambiguator/rule-20-test.cpp
test_main_SOURCES += disambiguator/rule-21a-test.cpp
test_main_SOURCES += disambiguator/rule-21b-test.cpp
test_main_SOURCES += disambiguator/rule-23-test.cpp
test_main_SOURCES += disambiguator/rule-24-test.cpp
test_main_SOURCES += disambiguator/rule-25-test.cpp
test_main_SOURCES += disambiguator/rule-26a-test.cpp
test_main_SOURCES += disambiguator/rule-26b-test.cpp
test_main_SOURCES += disambiguator/rule-27-test.cpp
test_main_SOURCES += disambiguator/rule-28a-test.cpp
test_main_SOURCES += disambiguator/rule-28b-test.cpp
test_main_SOURCES += disambiguator/rule-29-test.cpp
test_main_SOURCES += disambiguator/rule-30a-test.cpp
test_main_SOURCES += disambiguator/rule-30b-test.cpp
test_main_SOURCES += disambiguator/rule-30c-test.cpp
test_main_SOURCES += disambiguator/rule-31a-test.cpp
test_main_SOURCES += disambiguator/rule-31b-test.cpp
test_main_SOURCES += disambiguator/rule-32-test.cpp
test_main_SOURCES += disambiguator/rule-34-test.cpp
test_main_SOURCES += disambiguator/rule-35-test.cpp
test_main_SOURCES += disambiguator/rule-36-test.cpp
test_main_SOURCES += disambiguator/rule-37a-test.cpp
test_main_SOURCES += disambiguator/rule-37b-test.cpp
test_main_SOURCES += disambiguator/rule-38a-test.cpp
test_main_SOURCES += disambiguator/rule-38b-test.cpp
test_main_SOURCES += disambiguator/rule-39a-test.cpp
test_main_SOURCES += disambiguator/rule-39b-test.cpp
test_main_SOURCES += disambiguator/rule-40a-test.cpp
test_main_SOURCES += disambiguator/rule-40b-test.cpp
test_main_SOURCES += disambiguator/rule-41-test.cpp
test_main_SOURCES += disambiguator/rule-42-test.cpp

# test/
test_main_SOURCES += affix-pair-test.cpp
test_main_SOURCES += dictionary-test.cpp
test_main_SOURCES += disambiguator-rule-factory-test.cpp
test_main_SOURCES += hash-test.cpp
test_main_SOURCES += precedence-adjustor-specification-test.cpp
test_main_SOURCES += stemmer-test.cpp
test_main_SOURCES += stopword-remover-factory-test.cpp
test_main_SOURCES += stopword-remover-test.cpp
test_main_SOURCES += string-util-test.cpp
test_main_SOURCES += test-main.cpp

test_main_LDADD = ../src/code/libstemmer.la