nobase_include_HEADERS  = stemmer/affix-pair.hpp
nobase_include_HEADERS += stemmer/hash.hpp
nobase_include_HEADERS += stemmer/dictionary.hpp
nobase_include_HEADERS += stemmer/dictionary-abstract.hpp
nobase_include_HEADERS += stemmer/specification-abstract.hpp
nobase_include_HEADERS += stemmer/precedence-adjustor-specification.hpp
nobase_include_HEADERS += stemmer/disambiguator-abstract.hpp
nobase_include_HEADERS += stemmer/disambiguator-rule-collect.hpp
nobase_include_HEADERS += stemmer/disambiguator-rule-factory.hpp
nobase_include_HEADERS += stemmer/stemmer.hpp
nobase_include_HEADERS += stemmer/stemmer-abstract.hpp
nobase_include_HEADERS += stemmer/stopword-remover-factory.hpp
nobase_include_HEADERS += stemmer/stopword-remover.hpp
nobase_include_HEADERS += stemmer/string-util.hpp
nobase_include_HEADERS += stemmer/util-macro.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-1a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-1b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-2.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-3.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-4.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-5.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-6a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-6b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-7.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-8.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-9.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-10.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-11.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-12.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-13a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-13b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-14.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-15a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-15b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-16.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-17a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-17b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-17c.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-17d.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-18a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-18b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-19.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-20.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-21a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-21b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-23.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-24.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-25.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-26a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-26b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-27.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-28a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-28b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-29.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-30a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-30b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-30c.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-31a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-31b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-32.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-34.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-35.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-36.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-37a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-37b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-38a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-38b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-39a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-39b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-40a.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-40b.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-41.hpp
nobase_include_HEADERS += stemmer/disambiguator/rule-42.hpp
nobase_include_HEADERS += stemmer/context/context-abstract.hpp
nobase_include_HEADERS += stemmer/context/context.hpp
nobase_include_HEADERS += stemmer/context/removal-abstract.hpp
nobase_include_HEADERS += stemmer/context/removal.hpp
nobase_include_HEADERS += stemmer/context/visitor/prefix-disambiguator.hpp
nobase_include_HEADERS += stemmer/context/visitor/remove-derivational-suffix.hpp
nobase_include_HEADERS += stemmer/context/visitor/remove-inflectional-particle.hpp
nobase_include_HEADERS += stemmer/context/visitor/remove-inflectional-possessive-pronoun.hpp
nobase_include_HEADERS += stemmer/context/visitor/remove-plain-prefix.hpp
nobase_include_HEADERS += stemmer/context/visitor/unstem-short-word.hpp
nobase_include_HEADERS += stemmer/context/visitor/visitable-abstract.hpp
nobase_include_HEADERS += stemmer/context/visitor/visitor-abstract.hpp
nobase_include_HEADERS += stemmer/context/visitor/visitor-provider.hpp