AM_CPPFLAGS = -I$(srcdir)/../../include -DPKGDATADIR='"$(pkgdatadir)"'

noinst_LTLIBRARIES = libdisambiguator.la

libdisambiguator_la_SOURCES = \
	rule-1a.cpp \
	rule-1b.cpp \
	rule-2.cpp \
	rule-3.cpp \
	rule-4.cpp \
	rule-5.cpp \
	rule-6a.cpp \
	rule-6b.cpp \
	rule-7.cpp \
	rule-8.cpp \
	rule-9.cpp \
	rule-10.cpp \
	rule-11.cpp \
	rule-12.cpp \
	rule-13a.cpp \
	rule-13b.cpp \
	rule-14.cpp \
	rule-15a.cpp \
	rule-15b.cpp \
	rule-16.cpp \
	rule-17a.cpp \
	rule-17b.cpp \
	rule-17c.cpp \
	rule-17d.cpp \
	rule-18a.cpp \
	rule-18b.cpp \
	rule-19.cpp \
	rule-20.cpp \
	rule-21a.cpp \
	rule-21b.cpp \
	rule-23.cpp \
	rule-24.cpp \
	rule-25.cpp \
	rule-26a.cpp \
	rule-26b.cpp \
	rule-27.cpp \
	rule-28a.cpp \
	rule-28b.cpp \
	rule-29.cpp \
	rule-30a.cpp \
	rule-30b.cpp \
	rule-30c.cpp \
	rule-31a.cpp \
	rule-31b.cpp \
	rule-32.cpp \
	rule-34.cpp \
	rule-35.cpp \
	rule-36.cpp \
	rule-37a.cpp \
	rule-37b.cpp \
	rule-38a.cpp \
	rule-38b.cpp \
	rule-39a.cpp \
	rule-39b.cpp \
	rule-40a.cpp \
	rule-40b.cpp \
	rule-41.cpp \
	rule-42.cpp